--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -21,15 +21,18 @@
     <ClInclude Include="Preprocessor.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PackageDatabaseManager.hpp">
+    <ClInclude Include="CompilationUnitDatabaseBuilder.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CompilationUnitDatabaseBuilder.hpp">
+    <ClInclude Include="IntermidiateRepresentationEmmiter.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IntermidiateRepresentationEmmiter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
