--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="IntermidiateRepresentationEmmiter.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FunctionBodyBuilder.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ExpressionBuilder.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="IntermidiateRepresentationEmmiter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FunctionBodyBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExpressionBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
